--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
   - conda-forge/label/broken
 dependencies:
-  - ansi2html=1.5.2=py39haa95532_0
+  - ansi2html=1.5.2
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
   - argon2-cffi-bindings=21.2.0=py39h2bbff1b_0
   - asttokens=2.0.5=pyhd3eb1b0_0
