--- a/environment.yml
+++ b/environment.yml
@@ -16,4 +16,11 @@ dependencies:
   - cmocean
   - seaborn
   - qgrid
+  - pip:
+    - brotli==1.0.9
+    - dash==2.4.1
+    - dash-bootstrap-components==1.1.0
+    - dash-core-components==2.0.0
+    - dash-html-components==2.0.0
+    - dash-table==5.0.0
 prefix: E:\anaconda3\envs\capstone
