--- a/environment.yml
+++ b/environment.yml
@@ -24,4 +24,5 @@ dependencies:
     - dash-core-components==2.0.0
     - dash-html-components==2.0.0
     - dash-table==5.0.0
+    - jupyter-server-proxy
 prefix: E:\anaconda3\envs\capstone
